--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
     background-color: rgb(33,33,33);
     color: white;
     width: 1080px;
+    max-width: 90vw;
     height: 720px;
+    max-height: 90vh;
     margin: auto;
     /* Disable text selection */
     -webkit-user-select: none; /* Safari */
@@ -34,7 +36,9 @@ h3 {
     border: 1px solid blue;
     border-radius: 8px;
     width: 150px;
+    max-width: 20vw;
     height: 150px;
+    max-height: 20vw;
     text-align: center;
     vertical-align: middle;
     line-height: 150px;
@@ -86,4 +90,28 @@ h3 {
 }
 .cardBackFlipped {
     transform: rotateY(0deg);
+}
+
+@media all and (max-width: 600px) {
+    .card {
+        font-size: 2.25em;
+    }
+}
+
+@media all and (max-width: 550px) {
+    .card {
+        font-size: 2em;
+    }
+}
+
+@media all and (max-width: 540px) and (max-height: 720px) {
+    .card {
+        font-size: 2.5em;
+    }
+}
+
+@media all and (max-width: 324px) {
+    .card {
+        font-size: 1.5em;
+    }
 }
