--- a/style.css
+++ b/style.css
@@ -15,9 +15,14 @@ body {
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
 }
-h3 {
-    text-align: center;
-    padding: 24px;
+h2 {
+    padding-top: 8px;
+}
+.head {
+    display: flex;
+    justify-content: space-between;
+    line-height: 8vh;
+    vertical-align: middle;
 }
 #activity {
     background-color: rgba(255,255,255,0.1);
@@ -90,6 +95,36 @@ h3 {
 }
 .cardBackFlipped {
     transform: rotateY(0deg);
+}
+
+/* MODAL */
+.modal {
+    border: 2px solid black;
+    border-radius: 4px;
+    margin: auto;
+    width: 20vh;
+    height: 20vh;
+    text-align: center;
+    line-height: 8vh;
+}
+.modal::backdrop {
+    background: linear-gradient(45deg, rgb(200, 18, 18), green);
+    opacity: .4;
+}
+.modal_btn {
+    text-align: center;
+}
+.modal button {
+    background-color: #243763;
+    color: white;
+    padding: 4px;
+    border-radius: 4px;
+    margin: 4px;
+}
+.modal button:hover {
+    background-color: #172035;
+    color: white;
+    cursor: pointer;
 }
 
 @media all and (max-width: 600px) {
