--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
 }
@@ -98,12 +99,15 @@ h2 {
     background-color: darkblue;
     color: white;
     transform: rotateY(180deg);
+    overflow: hidden;
 }
 .cardBackFlipped {
     transform: rotateY(0deg);
 }
 .card img {
     width: 100%;
+    height: auto;
+    object-fit: cover;
     border-radius: 8px;
 }
 
@@ -163,6 +167,16 @@ h2 {
 #selectCategory button {
     width: 80%;
     margin: 8px;
+}
+.help {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.modal p, .modal h3 {
+    line-height: 1rem;
+}
+.modal h3 {
+    padding: 2rem;
 }
 
 @media all and (max-width: 600px) {
