--- a/style.css
+++ b/style.css
@@ -183,6 +183,24 @@ h2 {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+.imagePreview {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.imagePreview img {
+    width: 20%;
+    padding: 1rem;
+}
+.gitHubLink {
+    text-decoration: none;
+    color: rgb(33,33,33);
+    border: none;
+}
+.gitHubLink:hover {
+    color: darkblue;
+}
 
 @media all and (max-width: 600px) {
     .card {
